pokemondata requests
